[tool.poetry]
name = "nosql_document_based"
version = "0.1.0"
description = ""
authors = ["Saian Badarchy <sayan.badarchy@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
black = "^21.11b1"
pymongo = "^4.0"
Faker = "^9.9.0"
pyravendb = "^5.0.0"
pyArango = "^1.3.5"
rethinkdb = "^2.4.8"
cassandra-driver = "^3.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
